Add spring dev profile

--- a/spring/src/main/resources/application-dev.properties
+++ b/spring/src/main/resources/application-dev.properties
@@ -2,10 +2,10 @@ spring.application.name=spring
 
 # Her gir vi beskjed om hvor mye loggedetaljer vi onsker
 # Nivaaene er TRACE, DEBUG, INFO, WARN, ERROR
-#logging.level.root=INFO
-#logging.level.org.springframework.web=DEBUG
-#logging.level.org.hibernate=WARN
-#spring.mvc.log-request-details=true
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=WARN
+spring.mvc.log-request-details=true
 
 ## PostgreSQL-settings
 spring.datasource.url=${POSTGRES_URL}
